--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
 node_modules/
 
@@ -30,16 +28,18 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
+# Env
+.env
+.env.local
+.env.*.local
+.env.production
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 
+# Example apps
 app-example
 
-# generated native folders
-/ios
-/android
-.env
-.env.production
+# Generated native folders (KEEP ONLY IF USING EXPO MANAGED WORKFLOW)
+ios/
+android/
