--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@google/genai": "^1.29.0",
     "@google/generative-ai": "^0.24.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.2",
     "axios": "^1.13.1",
-    "expo": "~54.0.20",
+    "expo": "54.0.23",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
-    "expo-camera": "^17.0.8",
+    "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
@@ -40,7 +40,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "firebase": "^12.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
