--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "54.0.23",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
+    "expo-build-properties": "^1.0.9",
     "expo-camera": "~17.0.9",
     "expo-constants": "~18.0.10",
     "expo-file-system": "^19.0.17",
@@ -51,7 +52,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
